// <auto-generated />
using System;
using FleetOps.Tasks.Persistence;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace FleetOps.Tasks.Persistence.Migrations
{
    [DbContext(typeof(TasksDbContext))]
    [Migration("20260903112644_Outbox")]
    partial class Outbox
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasDefaultSchema("tasks")
                .HasAnnotation("ProductVersion", "10.0.11")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("FleetOps.Tasks.Domain.Resource", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("Code")
                        .IsRequired()
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)")
                        .HasColumnName("code");

                    b.Property<string>("Kind")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("kind");

                    b.HasKey("Id")
                        .HasName("pk_resource");

                    b.HasIndex("Code")
                        .IsUnique()
                        .HasDatabaseName("ix_resource_code");

                    b.ToTable("resource", "tasks");

                    b.HasData(
                        new
                        {
                            Id = new Guid("aaaaaaaa-0000-0000-0000-000000000001"),
                            Code = "DOCK-1",
                            Kind = "ChargingDock"
                        },
                        new
                        {
                            Id = new Guid("aaaaaaaa-0000-0000-0000-000000000002"),
                            Code = "CORRIDOR-A",
                            Kind = "Corridor"
                        },
                        new
                        {
                            Id = new Guid("aaaaaaaa-0000-0000-0000-000000000003"),
                            Code = "LIFT-1",
                            Kind = "Lift"
                        });
                });

            modelBuilder.Entity("FleetOps.Tasks.Domain.ResourceLock", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTime>("AcquiredAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("acquired_at_utc");

                    b.Property<Guid>("AgvId")
                        .HasColumnType("uuid")
                        .HasColumnName("agv_id");

                    b.Property<DateTime>("ExpiresAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("expires_at_utc");

                    b.Property<DateTime?>("ReleasedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("released_at_utc");

                    b.Property<Guid>("ResourceId")
                        .HasColumnType("uuid")
                        .HasColumnName("resource_id");

                    b.Property<uint>("Version")
                        .IsConcurrencyToken()
                        .ValueGeneratedOnAddOrUpdate()
                        .HasColumnType("xid")
                        .HasColumnName("xmin");

                    b.HasKey("Id")
                        .HasName("pk_resource_lock");

                    b.HasIndex("ResourceId")
                        .IsUnique()
                        .HasDatabaseName("ix_resource_lock_aktif_kaynak")
                        .HasFilter("released_at_utc IS NULL");

                    b.HasIndex("ReleasedAtUtc", "ExpiresAtUtc")
                        .HasDatabaseName("ix_resource_lock_released_at_utc_expires_at_utc");

                    b.ToTable("resource_lock", "tasks");
                });

            modelBuilder.Entity("FleetOps.Tasks.Domain.TaskAssignment", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<Guid>("AgvId")
                        .HasColumnType("uuid")
                        .HasColumnName("agv_id");

                    b.Property<DateTime>("AssignedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("assigned_at_utc");

                    b.Property<DateTime?>("CompletedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("completed_at_utc");

                    b.Property<Guid>("TaskId")
                        .HasColumnType("uuid")
                        .HasColumnName("task_id");

                    b.HasKey("Id")
                        .HasName("pk_task_assignment");

                    b.HasIndex("TaskId")
                        .HasDatabaseName("ix_task_assignment_task_id");

                    b.HasIndex("AgvId", "CompletedAtUtc")
                        .HasDatabaseName("ix_task_assignment_agv_id_completed_at_utc");

                    b.ToTable("task_assignment", "tasks");
                });

            modelBuilder.Entity("FleetOps.Tasks.Domain.TransportTask", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTime>("CreatedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at_utc");

                    b.Property<Guid>("FromLocationId")
                        .HasColumnType("uuid")
                        .HasColumnName("from_location_id");

                    b.Property<string>("MaterialCode")
                        .IsRequired()
                        .HasMaxLength(64)
                        .HasColumnType("character varying(64)")
                        .HasColumnName("material_code");

                    b.Property<int>("Priority")
                        .HasColumnType("integer")
                        .HasColumnName("priority");

                    b.Property<int>("Quantity")
                        .HasColumnType("integer")
                        .HasColumnName("quantity");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("status");

                    b.Property<Guid>("ToLocationId")
                        .HasColumnType("uuid")
                        .HasColumnName("to_location_id");

                    b.Property<uint>("Version")
                        .IsConcurrencyToken()
                        .ValueGeneratedOnAddOrUpdate()
                        .HasColumnType("xid")
                        .HasColumnName("xmin");

                    b.HasKey("Id")
                        .HasName("pk_transport_task");

                    b.HasIndex("Status", "Priority")
                        .HasDatabaseName("ix_transport_task_status_priority");

                    b.ToTable("transport_task", "tasks");
                });

            modelBuilder.Entity("FleetOps.Tasks.Infrastructure.OutboxMessage", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("Error")
                        .HasMaxLength(2000)
                        .HasColumnType("character varying(2000)")
                        .HasColumnName("error");

                    b.Property<DateTime>("OccurredAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("occurred_at_utc");

                    b.Property<string>("Payload")
                        .IsRequired()
                        .HasColumnType("jsonb")
                        .HasColumnName("payload");

                    b.Property<DateTime?>("ProcessedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("processed_at_utc");

                    b.Property<string>("Type")
                        .IsRequired()
                        .HasMaxLength(128)
                        .HasColumnType("character varying(128)")
                        .HasColumnName("type");

                    b.HasKey("Id")
                        .HasName("pk_outbox_message");

                    b.HasIndex("ProcessedAtUtc", "OccurredAtUtc")
                        .HasDatabaseName("ix_outbox_message_processed_at_utc_occurred_at_utc");

                    b.ToTable("outbox_message", "tasks");
                });

            modelBuilder.Entity("FleetOps.Tasks.Domain.ResourceLock", b =>
                {
                    b.HasOne("FleetOps.Tasks.Domain.Resource", null)
                        .WithMany()
                        .HasForeignKey("ResourceId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired()
                        .HasConstraintName("fk_resource_lock_resource_resource_id");
                });

            modelBuilder.Entity("FleetOps.Tasks.Domain.TaskAssignment", b =>
                {
                    b.HasOne("FleetOps.Tasks.Domain.TransportTask", null)
                        .WithMany("Assignments")
                        .HasForeignKey("TaskId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_task_assignment_transport_task_task_id");
                });

            modelBuilder.Entity("FleetOps.Tasks.Domain.TransportTask", b =>
                {
                    b.Navigation("Assignments");
                });
#pragma warning restore 612, 618
        }
    }
}
